fix: add new classes and replacе tag selectors according to rule 3.4 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,7 +10,7 @@ body {
   display: block;
   text-align: right;
 }
-.page-header img {
+.page-header__img {
   width: 100%;
 }
 .page-header .page-header__link {
@@ -34,17 +34,17 @@ body {
 .todo-list__new-task-wrapper {
   display: flex;
 }
-ul {
+#todo-list__incompleted-tasks, #todo-list__completed-tasks {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.todo-list__item, .todo-list__title {
   list-style:none;
 }
-input,button{
+.todo-list__input,.todo-list__button{
   outline:none;
 }
-button {
+.todo-list__button {
   background: none;
   border: 0px;
   color: #888;
@@ -53,12 +53,12 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.todo-list__button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="todo-list__new-task"] {
+.todo-list__title,
+#todo-list__add .todo-list__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -67,7 +67,7 @@ label[for="todo-list__new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.todo-list__input_text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -79,21 +79,21 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.todo-list__input_text:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="todo-list__new-task"] {
+#todo-list__add .todo-list__label {
   display: block;
   margin: 0 0 20px;
 }
-input#todo-list__new-task {
+#todo-list__new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.todo-list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -102,47 +102,45 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.todo-list__item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.todo-list__item > .todo-list__input_checkbox {
   margin: 0 10px;
 }
-li > label {
+.todo-list__item > .todo-list__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.todo-list__item > .todo-list__input_text {
   width: 226px
 }
-button.delete img {
+.todo-list__delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.todo-list__delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#todo-list__completed-tasks label {
+#todo-list__completed-tasks .todo-list__label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.todo-list__item > .todo-list__input_text {
   display:none
 }
-
-ul li.todo-list__edit-mode input[type=text] {
+.todo-list__edit-mode .todo-list__input_text {
   display:inline-block;
   width:224px
 }
-
-ul li.todo-list__edit-mode label {
+.todo-list__edit-mode .todo-list__label {
   display:none;
 }
