refactor: add padding for block content according to rule 3.5 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -18,8 +18,11 @@
 }
 
 @media (max-width:768px) {
-.page-header { text-align: center;
-}
+
+  .page-header { 
+    text-align: center;
+  }
+
 }
 .todo-list {
   display: block;
