--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 .todo-list__task{
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .todo-list__new-task-wrapper {
   display: flex;
@@ -119,7 +119,7 @@
   width: 226px;
 }
 .todo-list__item > .todo-list__input_text {
-  width: 226px
+  width: 226px;
 }
 .todo-list__delete-img {
   height: 2em;
@@ -132,17 +132,17 @@
 
 /* Completed */
 #todo-list__completed-tasks .todo-list__label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .todo-list__item > .todo-list__input_text {
-  display: none
+  display: none;
 }
 .todo-list__edit-mode .todo-list__input_text {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 .todo-list__edit-mode .todo-list__label {
   display: none;
