--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
 }
 /* Heading */
 .todo-list__title,
-#todo-list__add .todo-list__label {
+#todo-list__to-add .todo-list__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -90,7 +90,7 @@
 }
 
 /* New Task */
-#todo-list__add .todo-list__label {
+#todo-list__to-add .todo-list__label {
   display: block;
   margin: 0 0 20px;
 }
